paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_003/target.compile.log
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `lazy_static`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_003/target.rs:3:1
  |
3 | lazy_static::lazy_static! {
  | ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`

error[E0425]: cannot find value `OFF` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_003/target.rs:17:19
   |
17 |     let mut off = OFF.lock().unwrap();
   |                   ^^^ not found in this scope

error[E0425]: cannot find value `H` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_003/target.rs:22:17
   |
22 |     let mut h = H.lock().unwrap();
   |                 ^
   |
help: a local variable with a similar name exists
   |
22 -     let mut h = H.lock().unwrap();
22 +     let mut h = n.lock().unwrap();
   |
help: you might be missing a const parameter
   |
15 | fn new_vector<const H: /* Type */>(n: i32) -> Vector {
   |              +++++++++++++++++++++

error[E0425]: cannot find value `ID_COUNTER` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_003/target.rs:25:26
   |
25 |     let mut id_counter = ID_COUNTER.lock().unwrap();
   |                          ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `H` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_003/target.rs:66:10
   |
66 |     if (*H.lock().unwrap() & 1) == 0 {
   |          ^ help: a local variable with a similar name exists: `a`

warning: unused import: `std::sync::Mutex`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_003/target.rs:1:5
  |
1 | use std::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_003/target.rs:46:14
   |
46 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to 6 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0425, E0433.
For more information about an error, try `rustc --explain E0277`.